--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,15 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
-.container{
-    width: 76%;
-    margin: auto;
+.container {
+  width: 85%;
+  margin: auto;
 }
 
-li{
-    list-style-type: none;
+li {
+  list-style-type: none;
 }
