--- a/src/style/partials/_mixin.scss
+++ b/src/style/partials/_mixin.scss
@@ -1,51 +1,27 @@
-@use './variable' as *;
-// ALESSANDRA DALLA 1 ALLA 9
+@use "./variable" as *;
 
-
-
-
-
-
-
-
-// TOMMASO DALLA 10 ALLA 19
 @mixin button-styles($padding, $span-padding) {
-    display: inline-block;
+  display: inline-block;
+  background-color: $colorStyleJambo;
+  color: white;
+  padding: $padding;
+  border-radius: 10px;
+  border: none;
+
+  &:hover {
+    cursor: pointer;
     background-color: $colorStyleJambo;
-    color: white;
-    padding: $padding;
-    border-radius: 10px;
-    border: none;
-  
-    &:hover {
-      cursor: pointer;
-      background-color: $colorStyleJambo;
-    }
-  
-    &:hover span {
-      padding: $span-padding;
-      border-radius: 30px;
-      background-color: $colorStyleJamboHover;
-    }
-  
-    span {
-      padding: $span-padding;
-      border-radius: 30px;
-      background-color: $colorStyleJambo;
-    }
   }
 
-// PAOLO DALLA 20 ALLA 30
+  &:hover span {
+    padding: $span-padding;
+    border-radius: 30px;
+    background-color: $colorStyleJamboHover;
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
+  span {
+    padding: $span-padding;
+    border-radius: 30px;
+    background-color: $colorStyleJambo;
+  }
+}
