--- a/src/style/partials/_variable.scss
+++ b/src/style/partials/_variable.scss
@@ -1,21 +1,3 @@
-// ALESSANDRA DALLA 1 ALLA 9
-
-
-
-
-
-
-
-
-// TOMMASO DALLA 10 ALLA 19
 $colorStyleJambo: #058283;
 $colorStyleJamboHover: #0aa5a5;
-
-
-
-
-
-
-
-
-// PAOLO DALLA 20 ALLA 30
+$gapCardShop: 14px;
